lab/lab-06/y.output
Terminals which are not used

   BNOT_TOK
   NOT_TOK
   AND_TOK
   OR_TOK
   XOR_TOK
   LBRACKET_TOK
   RBRACKET_TOK
   SINGLE_QUOTE_TOK
   DOUBLE_QUOTE_TOK
   DO_TOK
   BREAK_TOK
   CONTINUE_TOK
   SWITCH_TOK
   CASE_TOK
   LOG_AND_TOK
   LOG_OR_TOK


Rules never reduced

   53 condition: expression relational_op expression


State 22 conflicts: 2 reduce/reduce
State 25 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 62 conflicts: 18 shift/reduce
State 63 conflicts: 18 shift/reduce, 2 reduce/reduce
State 71 conflicts: 18 shift/reduce


Grammar

    0 $accept: S $end

    1 S: S statement
    2  | S main
    3  | S function
    4  | statement
    5  | main
    6  | function

    7 open_paren: LBRACE_TOK

    8 close_paren: RBRACE_TOK

    9 main: datatype MAIN_TOK LPAREN_TOK RPAREN_TOK block

   10 block: open_paren statements blocks close_paren

   11 blocks: block statements blocks
   12       | /* empty */

   13 statements: statements statement
   14           | statements if_statement
   15           | statements for_statement
   16           | statements while_statement
   17           | /* empty */

   18 statement: operation SEMICOLON_TOK
   19          | return_statement

   20 operation: declaration
   21          | assignment
   22          | expression
   23          | condition

   24 declaration: datatype id_token

   25 assignment: datatype id_token EQ_TOK expression
   26           | id_token EQ_TOK expression

   27 return_statement: RETURN_TOK expression SEMICOLON_TOK

   28 function: datatype id_token LPAREN_TOK params RPAREN_TOK block

   29 params: datatype id_token COMMA_TOK params
   30       | datatype id_token
   31       | /* empty */

   32 function_call: id_token LPAREN_TOK args RPAREN_TOK

   33 args: expression COMMA_TOK args
   34     | expression
   35     | /* empty */

   36 expression: function_call
   37           | id_token
   38           | INTCONST
   39           | FLOATCONST
   40           | CHARCONST
   41           | STRCONST
   42           | SEMICOLON_TOK
   43           | LPAREN_TOK expression RPAREN_TOK
   44           | expression arithmetic_op expression
   45           | expression relational_op expression
   46           | expression PLUS_PLUS_TOK
   47           | expression MINUS_MINUS_TOK

   48 if_statement: IF_TOK LPAREN_TOK condition RPAREN_TOK block
   49             | IF_TOK LPAREN_TOK condition RPAREN_TOK block ELSE_TOK block
   50             | IF_TOK LPAREN_TOK condition RPAREN_TOK block ELSE_TOK if_statement

   51 for_statement: FOR_TOK LPAREN_TOK operation SEMICOLON_TOK operation SEMICOLON_TOK operation RPAREN_TOK block

   52 while_statement: WHILE_TOK LPAREN_TOK condition RPAREN_TOK block

   53 condition: expression relational_op expression
   54          | expression

   55 arithmetic_op: PLUS_TOK
   56              | MINUS_TOK
   57              | MULT_TOK
   58              | DIV_TOK
   59              | MOD_TOK
   60              | PLUS_EQ_TOK
   61              | MINUS_EQ_TOK
   62              | MULT_EQ_TOK
   63              | DIV_EQ_TOK
   64              | MOD_EQ_TOK

   65 relational_op: LT_TOK
   66              | GT_TOK
   67              | EQ_TOK
   68              | LT_EQ_TOK
   69              | GT_EQ_TOK
   70              | EQ_EQ_TOK

   71 datatype: INT_TOK
   72         | VOID_TOK
   73         | CHAR_TOK
   74         | FLOAT_TOK

   75 id_token: id_token COMMA_TOK ID_TOK
   76         | ID_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
LT_TOK (258) 65
GT_TOK (259) 66
EQ_TOK (260) 25 26 67
MINUS_TOK (261) 56
PLUS_TOK (262) 55
MULT_TOK (263) 57
DIV_TOK (264) 58
MOD_TOK (265) 59
BNOT_TOK (266)
NOT_TOK (267)
AND_TOK (268)
OR_TOK (269)
XOR_TOK (270)
LBRACE_TOK (271) 7
RBRACE_TOK (272) 8
LBRACKET_TOK (273)
RBRACKET_TOK (274)
LPAREN_TOK (275) 9 28 32 43 48 49 50 51 52
RPAREN_TOK (276) 9 28 32 43 48 49 50 51 52
SEMICOLON_TOK (277) 18 27 42 51
COMMA_TOK (278) 29 33 75
SINGLE_QUOTE_TOK (279)
DOUBLE_QUOTE_TOK (280)
MAIN_TOK (281) 9
WHILE_TOK (282) 52
DO_TOK (283)
FOR_TOK (284) 51
BREAK_TOK (285)
CONTINUE_TOK (286)
IF_TOK (287) 48 49 50
ELSE_TOK (288) 49 50
SWITCH_TOK (289)
CASE_TOK (290)
VOID_TOK (291) 72
INT_TOK (292) 71
FLOAT_TOK (293) 74
CHAR_TOK (294) 73
RETURN_TOK (295) 27
ID_TOK (296) 75 76
LT_EQ_TOK (297) 68
GT_EQ_TOK (298) 69
EQ_EQ_TOK (299) 70
PLUS_EQ_TOK (300) 60
MINUS_EQ_TOK (301) 61
MULT_EQ_TOK (302) 62
DIV_EQ_TOK (303) 63
MOD_EQ_TOK (304) 64
PLUS_PLUS_TOK (305) 46
MINUS_MINUS_TOK (306) 47
LOG_AND_TOK (307)
LOG_OR_TOK (308)
INTCONST (309) 38
FLOATCONST (310) 39
CHARCONST (311) 40
STRCONST (312) 41


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
S (59)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3
open_paren (60)
    on left: 7, on right: 10
close_paren (61)
    on left: 8, on right: 10
main (62)
    on left: 9, on right: 2 5
block (63)
    on left: 10, on right: 9 11 28 48 49 50 51 52
blocks (64)
    on left: 11 12, on right: 10 11
statements (65)
    on left: 13 14 15 16 17, on right: 10 11 13 14 15 16
statement (66)
    on left: 18 19, on right: 1 4 13
operation (67)
    on left: 20 21 22 23, on right: 18 51
declaration (68)
    on left: 24, on right: 20
assignment (69)
    on left: 25 26, on right: 21
return_statement (70)
    on left: 27, on right: 19
function (71)
    on left: 28, on right: 3 6
params (72)
    on left: 29 30 31, on right: 28 29
function_call (73)
    on left: 32, on right: 36
args (74)
    on left: 33 34 35, on right: 32 33
expression (75)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47, on right: 22 25 26
    27 33 34 43 44 45 46 47 53 54
if_statement (76)
    on left: 48 49 50, on right: 14 50
for_statement (77)
    on left: 51, on right: 15
while_statement (78)
    on left: 52, on right: 16
condition (79)
    on left: 53 54, on right: 23 48 49 50 52
arithmetic_op (80)
    on left: 55 56 57 58 59 60 61 62 63 64, on right: 44
relational_op (81)
    on left: 65 66 67 68 69 70, on right: 45 53
datatype (82)
    on left: 71 72 73 74, on right: 9 24 25 28 29 30
id_token (83)
    on left: 75 76, on right: 24 25 26 28 29 30 32 37 75


state 0

    0 $accept: . S $end

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    VOID_TOK       shift, and go to state 3
    INT_TOK        shift, and go to state 4
    FLOAT_TOK      shift, and go to state 5
    CHAR_TOK       shift, and go to state 6
    RETURN_TOK     shift, and go to state 7
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    S                 go to state 13
    main              go to state 14
    statement         go to state 15
    operation         go to state 16
    declaration       go to state 17
    assignment        go to state 18
    return_statement  go to state 19
    function          go to state 20
    function_call     go to state 21
    expression        go to state 22
    condition         go to state 23
    datatype          go to state 24
    id_token          go to state 25


state 1

   43 expression: LPAREN_TOK . expression RPAREN_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 26
    id_token       go to state 27


state 2

   42 expression: SEMICOLON_TOK .

    $default  reduce using rule 42 (expression)


state 3

   72 datatype: VOID_TOK .

    $default  reduce using rule 72 (datatype)


state 4

   71 datatype: INT_TOK .

    $default  reduce using rule 71 (datatype)


state 5

   74 datatype: FLOAT_TOK .

    $default  reduce using rule 74 (datatype)


state 6

   73 datatype: CHAR_TOK .

    $default  reduce using rule 73 (datatype)


state 7

   27 return_statement: RETURN_TOK . expression SEMICOLON_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 28
    id_token       go to state 27


state 8

   76 id_token: ID_TOK .

    $default  reduce using rule 76 (id_token)


state 9

   38 expression: INTCONST .

    $default  reduce using rule 38 (expression)


state 10

   39 expression: FLOATCONST .

    $default  reduce using rule 39 (expression)


state 11

   40 expression: CHARCONST .

    $default  reduce using rule 40 (expression)


state 12

   41 expression: STRCONST .

    $default  reduce using rule 41 (expression)


state 13

    0 $accept: S . $end
    1 S: S . statement
    2  | S . main
    3  | S . function

    $end           shift, and go to state 29
    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    VOID_TOK       shift, and go to state 3
    INT_TOK        shift, and go to state 4
    FLOAT_TOK      shift, and go to state 5
    CHAR_TOK       shift, and go to state 6
    RETURN_TOK     shift, and go to state 7
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    main              go to state 30
    statement         go to state 31
    operation         go to state 16
    declaration       go to state 17
    assignment        go to state 18
    return_statement  go to state 19
    function          go to state 32
    function_call     go to state 21
    expression        go to state 22
    condition         go to state 23
    datatype          go to state 24
    id_token          go to state 25


state 14

    5 S: main .

    $default  reduce using rule 5 (S)


state 15

    4 S: statement .

    $default  reduce using rule 4 (S)


state 16

   18 statement: operation . SEMICOLON_TOK

    SEMICOLON_TOK  shift, and go to state 33


state 17

   20 operation: declaration .

    $default  reduce using rule 20 (operation)


state 18

   21 operation: assignment .

    $default  reduce using rule 21 (operation)


state 19

   19 statement: return_statement .

    $default  reduce using rule 19 (statement)


state 20

    6 S: function .

    $default  reduce using rule 6 (S)


state 21

   36 expression: function_call .

    $default  reduce using rule 36 (expression)


state 22

   22 operation: expression .
   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK
   53 condition: expression . relational_op expression
   54          | expression .

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    RPAREN_TOK     reduce using rule 22 (operation)
    RPAREN_TOK     [reduce using rule 54 (condition)]
    SEMICOLON_TOK  reduce using rule 22 (operation)
    SEMICOLON_TOK  [reduce using rule 54 (condition)]
    $default       reduce using rule 22 (operation)

    arithmetic_op  go to state 52
    relational_op  go to state 53


state 23

   23 operation: condition .

    $default  reduce using rule 23 (operation)


state 24

    9 main: datatype . MAIN_TOK LPAREN_TOK RPAREN_TOK block
   24 declaration: datatype . id_token
   25 assignment: datatype . id_token EQ_TOK expression
   28 function: datatype . id_token LPAREN_TOK params RPAREN_TOK block

    MAIN_TOK  shift, and go to state 54
    ID_TOK    shift, and go to state 8

    id_token  go to state 55


state 25

   26 assignment: id_token . EQ_TOK expression
   32 function_call: id_token . LPAREN_TOK args RPAREN_TOK
   37 expression: id_token .
   75 id_token: id_token . COMMA_TOK ID_TOK

    EQ_TOK      shift, and go to state 56
    LPAREN_TOK  shift, and go to state 57
    COMMA_TOK   shift, and go to state 58

    EQ_TOK    [reduce using rule 37 (expression)]
    $default  reduce using rule 37 (expression)


state 26

   43 expression: LPAREN_TOK expression . RPAREN_TOK
   44           | expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    RPAREN_TOK       shift, and go to state 59
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 27

   32 function_call: id_token . LPAREN_TOK args RPAREN_TOK
   37 expression: id_token .
   75 id_token: id_token . COMMA_TOK ID_TOK

    LPAREN_TOK  shift, and go to state 57
    COMMA_TOK   shift, and go to state 58

    COMMA_TOK  [reduce using rule 37 (expression)]
    $default   reduce using rule 37 (expression)


state 28

   27 return_statement: RETURN_TOK expression . SEMICOLON_TOK
   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    SEMICOLON_TOK    shift, and go to state 61
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 29

    0 $accept: S $end .

    $default  accept


state 30

    2 S: S main .

    $default  reduce using rule 2 (S)


state 31

    1 S: S statement .

    $default  reduce using rule 1 (S)


state 32

    3 S: S function .

    $default  reduce using rule 3 (S)


state 33

   18 statement: operation SEMICOLON_TOK .

    $default  reduce using rule 18 (statement)


state 34

   65 relational_op: LT_TOK .

    $default  reduce using rule 65 (relational_op)


state 35

   66 relational_op: GT_TOK .

    $default  reduce using rule 66 (relational_op)


state 36

   67 relational_op: EQ_TOK .

    $default  reduce using rule 67 (relational_op)


state 37

   56 arithmetic_op: MINUS_TOK .

    $default  reduce using rule 56 (arithmetic_op)


state 38

   55 arithmetic_op: PLUS_TOK .

    $default  reduce using rule 55 (arithmetic_op)


state 39

   57 arithmetic_op: MULT_TOK .

    $default  reduce using rule 57 (arithmetic_op)


state 40

   58 arithmetic_op: DIV_TOK .

    $default  reduce using rule 58 (arithmetic_op)


state 41

   59 arithmetic_op: MOD_TOK .

    $default  reduce using rule 59 (arithmetic_op)


state 42

   68 relational_op: LT_EQ_TOK .

    $default  reduce using rule 68 (relational_op)


state 43

   69 relational_op: GT_EQ_TOK .

    $default  reduce using rule 69 (relational_op)


state 44

   70 relational_op: EQ_EQ_TOK .

    $default  reduce using rule 70 (relational_op)


state 45

   60 arithmetic_op: PLUS_EQ_TOK .

    $default  reduce using rule 60 (arithmetic_op)


state 46

   61 arithmetic_op: MINUS_EQ_TOK .

    $default  reduce using rule 61 (arithmetic_op)


state 47

   62 arithmetic_op: MULT_EQ_TOK .

    $default  reduce using rule 62 (arithmetic_op)


state 48

   63 arithmetic_op: DIV_EQ_TOK .

    $default  reduce using rule 63 (arithmetic_op)


state 49

   64 arithmetic_op: MOD_EQ_TOK .

    $default  reduce using rule 64 (arithmetic_op)


state 50

   46 expression: expression PLUS_PLUS_TOK .

    $default  reduce using rule 46 (expression)


state 51

   47 expression: expression MINUS_MINUS_TOK .

    $default  reduce using rule 47 (expression)


state 52

   44 expression: expression arithmetic_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 62
    id_token       go to state 27


state 53

   45 expression: expression relational_op . expression
   53 condition: expression relational_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 63
    id_token       go to state 27


state 54

    9 main: datatype MAIN_TOK . LPAREN_TOK RPAREN_TOK block

    LPAREN_TOK  shift, and go to state 64


state 55

   24 declaration: datatype id_token .
   25 assignment: datatype id_token . EQ_TOK expression
   28 function: datatype id_token . LPAREN_TOK params RPAREN_TOK block
   75 id_token: id_token . COMMA_TOK ID_TOK

    EQ_TOK      shift, and go to state 65
    LPAREN_TOK  shift, and go to state 66
    COMMA_TOK   shift, and go to state 58

    $default  reduce using rule 24 (declaration)


state 56

   26 assignment: id_token EQ_TOK . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 67
    id_token       go to state 27


state 57

   32 function_call: id_token LPAREN_TOK . args RPAREN_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    $default  reduce using rule 35 (args)

    function_call  go to state 21
    args           go to state 68
    expression     go to state 69
    id_token       go to state 27


state 58

   75 id_token: id_token COMMA_TOK . ID_TOK

    ID_TOK  shift, and go to state 70


state 59

   43 expression: LPAREN_TOK expression RPAREN_TOK .

    $default  reduce using rule 43 (expression)


state 60

   45 expression: expression relational_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 71
    id_token       go to state 27


state 61

   27 return_statement: RETURN_TOK expression SEMICOLON_TOK .

    $default  reduce using rule 27 (return_statement)


state 62

   44 expression: expression . arithmetic_op expression
   44           | expression arithmetic_op expression .
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 44 (expression)]
    GT_TOK           [reduce using rule 44 (expression)]
    EQ_TOK           [reduce using rule 44 (expression)]
    MINUS_TOK        [reduce using rule 44 (expression)]
    PLUS_TOK         [reduce using rule 44 (expression)]
    MULT_TOK         [reduce using rule 44 (expression)]
    DIV_TOK          [reduce using rule 44 (expression)]
    MOD_TOK          [reduce using rule 44 (expression)]
    LT_EQ_TOK        [reduce using rule 44 (expression)]
    GT_EQ_TOK        [reduce using rule 44 (expression)]
    EQ_EQ_TOK        [reduce using rule 44 (expression)]
    PLUS_EQ_TOK      [reduce using rule 44 (expression)]
    MINUS_EQ_TOK     [reduce using rule 44 (expression)]
    MULT_EQ_TOK      [reduce using rule 44 (expression)]
    DIV_EQ_TOK       [reduce using rule 44 (expression)]
    MOD_EQ_TOK       [reduce using rule 44 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 44 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 44 (expression)]
    $default         reduce using rule 44 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 63

   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   45           | expression relational_op expression .
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK
   53 condition: expression relational_op expression .

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 45 (expression)]
    GT_TOK           [reduce using rule 45 (expression)]
    EQ_TOK           [reduce using rule 45 (expression)]
    MINUS_TOK        [reduce using rule 45 (expression)]
    PLUS_TOK         [reduce using rule 45 (expression)]
    MULT_TOK         [reduce using rule 45 (expression)]
    DIV_TOK          [reduce using rule 45 (expression)]
    MOD_TOK          [reduce using rule 45 (expression)]
    RPAREN_TOK       reduce using rule 45 (expression)
    RPAREN_TOK       [reduce using rule 53 (condition)]
    SEMICOLON_TOK    reduce using rule 45 (expression)
    SEMICOLON_TOK    [reduce using rule 53 (condition)]
    LT_EQ_TOK        [reduce using rule 45 (expression)]
    GT_EQ_TOK        [reduce using rule 45 (expression)]
    EQ_EQ_TOK        [reduce using rule 45 (expression)]
    PLUS_EQ_TOK      [reduce using rule 45 (expression)]
    MINUS_EQ_TOK     [reduce using rule 45 (expression)]
    MULT_EQ_TOK      [reduce using rule 45 (expression)]
    DIV_EQ_TOK       [reduce using rule 45 (expression)]
    MOD_EQ_TOK       [reduce using rule 45 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 45 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 45 (expression)]
    $default         reduce using rule 45 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 64

    9 main: datatype MAIN_TOK LPAREN_TOK . RPAREN_TOK block

    RPAREN_TOK  shift, and go to state 72


state 65

   25 assignment: datatype id_token EQ_TOK . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 73
    id_token       go to state 27


state 66

   28 function: datatype id_token LPAREN_TOK . params RPAREN_TOK block

    VOID_TOK   shift, and go to state 3
    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6

    $default  reduce using rule 31 (params)

    params    go to state 74
    datatype  go to state 75


state 67

   26 assignment: id_token EQ_TOK expression .
   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    $default  reduce using rule 26 (assignment)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 68

   32 function_call: id_token LPAREN_TOK args . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 76


state 69

   33 args: expression . COMMA_TOK args
   34     | expression .
   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    COMMA_TOK        shift, and go to state 77
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    $default  reduce using rule 34 (args)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 70

   75 id_token: id_token COMMA_TOK ID_TOK .

    $default  reduce using rule 75 (id_token)


state 71

   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   45           | expression relational_op expression .
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 45 (expression)]
    GT_TOK           [reduce using rule 45 (expression)]
    EQ_TOK           [reduce using rule 45 (expression)]
    MINUS_TOK        [reduce using rule 45 (expression)]
    PLUS_TOK         [reduce using rule 45 (expression)]
    MULT_TOK         [reduce using rule 45 (expression)]
    DIV_TOK          [reduce using rule 45 (expression)]
    MOD_TOK          [reduce using rule 45 (expression)]
    LT_EQ_TOK        [reduce using rule 45 (expression)]
    GT_EQ_TOK        [reduce using rule 45 (expression)]
    EQ_EQ_TOK        [reduce using rule 45 (expression)]
    PLUS_EQ_TOK      [reduce using rule 45 (expression)]
    MINUS_EQ_TOK     [reduce using rule 45 (expression)]
    MULT_EQ_TOK      [reduce using rule 45 (expression)]
    DIV_EQ_TOK       [reduce using rule 45 (expression)]
    MOD_EQ_TOK       [reduce using rule 45 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 45 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 45 (expression)]
    $default         reduce using rule 45 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 72

    9 main: datatype MAIN_TOK LPAREN_TOK RPAREN_TOK . block

    LBRACE_TOK  shift, and go to state 78

    open_paren  go to state 79
    block       go to state 80


state 73

   25 assignment: datatype id_token EQ_TOK expression .
   44 expression: expression . arithmetic_op expression
   45           | expression . relational_op expression
   46           | expression . PLUS_PLUS_TOK
   47           | expression . MINUS_MINUS_TOK
